# AstroCLIP

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  environment.yaml  environment.yml  hyperparams.yaml  pyproject.toml
astroclip/: augmentations.py  blocks.py  legacy_survey.py  losses.py  models.py  training_utils.py  transforms.py  utils.py
downstream_tasks/: README.md  Redshift Estimation.ipynb  Similarity Search.ipynb  generate_embeddings.py
notebooks/: 2. Analysis on 53232482.ipynb  3. Analysis on 53341353.ipynb  Exploring the dataset.ipynb
report/: biblio.bib  exec-summary.bib  exec-summary.ipynb  exec-summary.tex  iclr2024_conference.sty  jcappub.sty  main.bib  main.tex  report.tex
report/sections/: 1-introduction.tex  2-original-paper.tex  3-data.tex  3-method.tex  4-implementation.tex  4-results.tex  5-conclusion.tex  5-training.tex  6-results.tex  7-conclusion.tex  discussion.tex  method.tex  original-paper.tex  related-works.tex  results.tex
results/downstream_tasks/: README.md  Redshift Estimation.ipynb  Similarity Search.ipynb  generate_embeddings.py  utils.py
results/training/: README.md  _reformat_wandb_logs.py  training_analysis.ipynb
results/training/wandb_logs/: train_batch_size.csv  train_loss.csv  val_ii_score.csv  val_is_score.csv  val_loss.csv  val_si_score.csv  val_ss_score.csv
scripts/: compute_observed_spectra_std_dev.py  download_desi_dataset.py  download_pretrained_spectrum_encoder.py  pretrain_spectrum_autoencoder.py  sweep_astroclip.py  train_astroclip.py
scripts/slurm/: download_desi_dataset.peta4-icelake  sweep_astroclip.wilkes3  train_astroclip.wilkes3
slurm_submit/: download_desi_dataset.peta4-icelake  train_astroclip.wilkes3
